2012-01-11  Vsevolod Vlasov  <vsevik@chromium.org>

        Make default console messages line numbers consistent.
        https://bugs.webkit.org/show_bug.cgi?id=74075

        Reviewed by Pavel Feldman.

        Unset line numbers are not printed to console now.

        * Api/qwebpage.cpp:
        (QWebPage::javaScriptConsoleMessage):

2012-01-11  Simon Hausmann  <simon.hausmann@nokia.com>

        Unreviewed trivial build fix: Removed unnecessary QHttpRequestHeader
        inclusion (and the file is removed in newer Qt 5 versions).

        * Api/qwebpage.cpp:

2012-01-11  Rafael Brandao  <rafael.lobo@openbossa.org>

        [Qt][WK2] Fix the build for newer Qt5
        https://bugs.webkit.org/show_bug.cgi?id=75964

        Reviewed by Simon Hausmann.

        Added QHttpHeader, QHttpResponseHeader and QHttpRequestHeader
        that were removed from Qt. They are now kept under a private header
        and only the relevant code is present.

        * Api/qhttpheader.cpp: Added.
        (QHttpHeader::QHttpHeader):
        (QHttpHeader::~QHttpHeader):
        (QHttpHeader::parse):
        (QHttpHeader::value):
        (QHttpHeader::hasKey):
        (QHttpHeader::setValue):
        (QHttpHeader::addValue):
        (QHttpHeader::parseLine):
        (QHttpHeader::toString):
        (QHttpHeader::hasContentLength):
        (QHttpHeader::contentLength):
        (QHttpHeader::setContentLength):
        (QHttpHeader::hasContentType):
        (QHttpHeader::contentType):
        (QHttpHeader::setContentType):
        (QHttpResponseHeader::QHttpResponseHeader):
        (QHttpResponseHeader::parseLine):
        (QHttpResponseHeader::toString):
        (QHttpRequestHeader::QHttpRequestHeader):
        (QHttpRequestHeader::parseLine):
        (QHttpRequestHeader::toString):
        * Api/qhttpheader_p.h: Added.
        (QHttpHeader::isValid):
        (QHttpHeader::setValid):
        (QHttpResponseHeader::statusCode):
        (QHttpResponseHeader::reasonPhrase):